Fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ html {
   width: 300px;
   height: 100px;
   border-radius: 50%;
-  background: linear-gradient(to right, #ff415d, #62a8b2);
+  background: linear-gradient(to right, #ff415d, #878d9e);
   animation: blobanimate 10s infinite linear forwards;
   position: absolute;
   top: 50%;
